--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,7 +1,5 @@
 ---
   deployment:
     tasks:
-      - export DEPLOYPATHMODEL=/home/emediam/public_html/universite/paiement/Model/
-      - export DEPLOYPATHJS=/home/emediam/public_html/universite/paiement/Vue/JS/
-      - /bin/cp -f Model/{ComptableManagerCheque.class.php,ComptableManagerMobileMoney.class.php,ComptableManagerVersement.class.php,ComptableManagerVirement.class.php,ComptableManagerWestern.class.php} $DEPLOYPATHMODEL
-      -/bin/cp -f Vue/JS/AjaxAffichage.js $DEPLOYPATHJS
+      - export DEPLOYPATH=/home/emediam/public_html/universite/paiement/Model/
+      - /bin/cp -f Model/{ComptableManagerCheque.class.php,ComptableManagerMobileMoney.class.php,ComptableManagerVersement.class.php,ComptableManagerVirement.class.php,ComptableManagerWestern.class.php} $DEPLOYPATH
